ensure logo still visible on a small screen

--- a/style.css
+++ b/style.css
@@ -81,8 +81,8 @@ p {
 
 #logo {
 		position: absolute;
-	    	top: 752px;
-	    	right: 7px;
+	    	bottom: 7px;
+	    	left: 7px;
 	    	z-index: 9000;
 		height: 30px;
 		width: 30px;
@@ -167,11 +167,24 @@ p {
 	}
 }
 
+@media (max-width: 700px) {
+	#key {
+		font-size: 12.5px;
+	}
+	#mapid { 
+	height: 600px;
+	}
+
+}
+
 @media (max-width: 600px) {
 	#key {
 		visibility: hidden;
 	}
 	#mapid { 
 	height: 550px;
+	}
+	#logo {
+		bottom: 40px;
 	}
 }
